# BambooAnalysis

./: .gitignore  .gitlab-ci.yml  AUTHORS  LICENSE  NOTICE  Pipfile  README.md  README.rst  jet_test.py  jet_test.yml  phaseII-analysis-FS-Delphes.yml  phaseII-analysis-FS.yml  phaseII-analysis.py  setup.cfg  setup.py
bamboo/: __init__.py  analysismodules.py  analysisutils.py  batch.py  batch_htcondor.py  batch_slurm.py  dataframebackend.py  jetdatabasecache.py  llbbSF.py  logging.py  plots.py  root.py  scalefactors.py  treedecorators.py  treefunctions.py  treeoperations.py  treeproxies.py
bamboo/scripts/: bambooRun.py  makePUReWeightJSON.py
cpp/: bamboohelpers.h  jmesystematics.h  range.h  scalefactors.h
doc/: advanced.rst  apiref.rst  conf.py  hacking.rst  index.rst  install.rst  recipes.rst  treefunctions.rst  userguide.rst
examples/: adl_benchmarks.py  analysis1.yml  analysis_eletnp.yml  analysis_zmm.yml  analysis_zmm2.yml  cern.ini  cmsPhase2Sim.py  cmsPhase2Sim_test.yml  df_nano.py  df_ttW.py  eletnp.py  ingrid.ini  lxbatch.ini  nanozmumu.py  slurm_cp3.ini  test1.yml  test_df_nano.py  test_nanozmm.yml  test_nanozmm1.yml
ext/: CMakeLists.txt  getjetclasses.sh  install_lwtnn.sh  install_tensorflow-c.sh  jetclasses.patch  rmjetclasses.sh
ext/cmake/modules/: FindTensorflowC.cmake
ext/include/: BTagCalibrationStandalone.h  BinnedValues.h  BinnedValuesJSONParser.h  Histogram.h  JMESystematicsCalculator.h  JMESystematicsCalculators.h  LumiMask.h  RochesterCorrectionCalculator.h  bamboolwtnn.h  bamboorandom.h  bambootensorflowc.h  bambootorch.h  kinematicvariations.h
ext/src/: BTagCalibrationStandalone.cpp  BinnedValues.cc  BinnedValuesJSONParser.cc  JMESystematicsCalculator.cc  JMESystematicsCalculators.cc  LumiMask.cc  RochesterCorrectionCalculator.cc  bamboolwtnn.cc  bamboorandom.cc  bambootensorflowc.cc  bambootorch.cc
rtb/: phaseII-analysis-Delphes.yml  phaseII-analysis-FS-Delphes.yml  phaseII-analysis-FS.yml  phaseII-analysis.py
scripts/: bambooRun  makePUReWeightJSON.py
tests/: helpers.py  lumi_mask.py  test_bamboorun.py  test_jmesystcalc.py  test_libtorcheval_nn.py  test_lumi_mask.py  test_lwtnneval_nn.py  test_nanodeco.py  test_plots_nano.py  test_plots_postprocnano.py  test_postprocnanodeco.py  test_rochester.py  test_sfweights.py  test_tensorflowceval_nn.py
tests/data/: DY_M50_2016.root  DY_M50_2016postproc_JMEKin_bTagShape.root  DY_M50_2016postproc_JMEKin_bTagShape_puWeight.root  DY_M50_2017postproc_JMEKin_METFixEE2017.root  DoubleMuon_2016Gpostproc_JMEKin.root  nn1.pb  nn1.pt  nn1_lwtnn.json  puweights.json  samples.txt
